--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,21 @@ body{
 }
 
 header{
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100%;
     border: 1px solid gray;
     height: 215px;
     background-color: burlywood;
+}
+
+.main-content{
+    position: relative;  left: 100px; top: 10px;
+    border: 2px solid lightslategray;
+    border-radius: 10px;
+    margin: 10px 10px;
+    float: left;
+    background-color: gainsboro;
 }
 
 .logo img{
@@ -44,13 +53,7 @@ header a{
 
 }
 
-.main-content{
-position: relative;  left: 100px; top: 300px;
-border: 2px solid lightslategray;
-    border-radius: 5px;
-    margin: 10px 10px;
-    float: left;
-}
+
 
 .content{
 float: left;
