--- a/style/style.css
+++ b/style/style.css
@@ -8,10 +8,9 @@ body{
 }
 
 header{
-  position: relative;
   width: 100%;
   height: 100%;
-    border: 1px solid gray;
+    border-bottom: 2px solid gray;
     height: 215px;
     background-color: burlywood;
 }
@@ -33,7 +32,7 @@ header{
 
 a{
     text-decoration: none;
-    color: darkseagreen;
+    color: black;
 }
 
 header a{
@@ -69,4 +68,13 @@ float: left;
 
 .content p{
     position: relative; left: 100px;
+}
+
+/* usphoto */
+
+.container img{
+    max-width: 70%;
+    position: relative; left: 15%;
+    margin-top: 3%;
+    border-radius: 10px;
 }
