--- a/style/style.css
+++ b/style/style.css
@@ -78,3 +78,29 @@ float: left;
     margin-top: 3%;
     border-radius: 10px;
 }
+
+
+
+/* profile */
+
+.form{
+   position: relative; left: 10%;
+   padding: 3%;
+   margin: 2% 0% 2% 0%;
+   border: 2px solid aliceblue;
+   max-width: 20%;
+   background-color: chartreuse;
+   border-radius: 10px;
+}
+
+.top img{
+    max-width: 70%;
+    position: relative; left: 10%;
+    margin-top: 3%;
+    border-radius: 10px;
+}
+
+.top form input{
+    max-width: 120px;
+    position: relative; left: 70%;
+}
